# clickup-cli

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  glama.json
.github/workflows/: build.yml  ci.yml
docs/: CNAME  _config.yml  commands.md  index.html  index.md  install.md  mcp.md
docs/_includes/: head_custom.html
docs/_layouts/: default.html
docs/_sass/custom/: custom.scss
docs/site/: _config.yml  commands.md  index.md
docs/superpowers/plans/: 2026-03-30-clickup-cli-v0.1.md
docs/superpowers/specs/: 2026-03-17-clickup-cli-rust-rewrite-design.md
npm/: README.md  install.js  package.json
src/: client.rs  config.rs  error.rs  lib.rs  main.rs  mcp.rs  output.rs
src/commands/: acl.rs  agent_config.rs  attachment.rs  audit_log.rs  auth.rs  chat.rs  checklist.rs  comment.rs  completions.rs  doc.rs  field.rs  folder.rs  goal.rs  group.rs  guest.rs  list.rs  mcp_cmd.rs  member.rs  mod.rs  role.rs  setup.rs  shared.rs  space.rs  status.rs  tag.rs  task.rs  task_type.rs  template.rs  time.rs  user.rs  view.rs  webhook.rs  workspace.rs
src/models/: folder.rs  list.rs  mod.rs  space.rs  task.rs  user.rs  workspace.rs
tests/: test_cli.rs  test_client.rs  test_config.rs  test_error.rs  test_output.rs
