[package]
name = "clickup-cli"
version = "0.1.0"
edition = "2021"
description = "CLI for the ClickUp API, optimized for AI agents"
license = "Apache-2.0"

[[bin]]
name = "clickup"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
dirs = "6"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
comfy-table = "=7.1.1"

[dev-dependencies]
wiremock = "=0.6.0"
tempfile = "3"
assert_cmd = "2"
predicates = "3"
